notebook/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: cdrive-jnb
spec:
  selector:
    name: cdrive-jnb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: ClusterIP
