notebook/ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cdrive-jnb
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: “true”
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
  - host: notebook.columbusecosystem.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: cdrive-jnb
          servicePort: 80
  tls:
  - secretName: tls-prod-cert
    hosts:
    - notebook.columbusecosystem.com
